--- a/code1_initial_clean.ipynb
+++ b/code1_initial_clean.ipynb
@@ -44,8 +44,7 @@
     "from sklearn.metrics import root_mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "csv_files = glob.glob('sigcap_data/data/*.csv')\n",
-    "# csv_files = [file for file in csv_files if file != 'sigcap_data\\cbrs_CLEANED_minimal.csv']\n",
+    "csv_files = glob.glob('data/sigcap_data*.csv')\n",
     "dfs = []\n",
     "for file in csv_files:\n",
     "    df = pd.read_csv(file)\n",
