--- a/code0_initial_clean.ipynb
+++ b/code0_initial_clean.ipynb
@@ -44,14 +44,16 @@
     "from sklearn.metrics import root_mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "csv_files = glob.glob('data/sigcap_data*.csv')\n",
+    "csv_files = glob.glob('data/sigcap_data/*.csv')\n",
     "dfs = []\n",
     "for file in csv_files:\n",
     "    df = pd.read_csv(file)\n",
     "    dfs.append(df)\n",
     "df_all = pd.concat(dfs)\n",
     "\n",
-    "print(df_all[df_all['band*'] == 48][['lte-ci/nr-nci', 'freq*', 'pci']].drop_duplicates().dropna().sort_values('lte-ci/nr-nci'))"
+    "print(df_all[df_all['band*'] == 48][['lte-ci/nr-nci', 'freq*', 'pci']].drop_duplicates().dropna().sort_values('lte-ci/nr-nci'))\n",
+    "\n",
+    "del df, dfs, csv_files, file"
    ]
   }
  ],
@@ -71,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
