--- a/final_project/notebooks/code2_sigcap_pathloss_model.ipynb
+++ b/final_project/notebooks/code2_sigcap_pathloss_model.ipynb
@@ -505,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_1",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
