--- a/final_project/notebooks/code5_learning.ipynb
+++ b/final_project/notebooks/code5_learning.ipynb
@@ -4,29 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Application of Antenna pattern onto the received meaurements"
+    "Learning of model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%reset -f\n",
+    "### Resetting all variables\n",
+    "\n",
+    "%reset -f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Importing packages\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import folium\n",
     "import matplotlib.pyplot as plt\n",
     "import branca.colormap as cm\n",
+    "import seaborn as sns\n",
     "\n",
     "import sys\n",
     "sys.path.append('../python')\n",
     "from earfcn_to_freq import earfcn_to_freq\n",
     "from haversine import haversine\n",
     "from calc_bearing import calc_bearing\n",
-    "from gain_calc import gain_calc\n",
+    "from gain_calc import gain_calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Data Preprocesing\n",
     "\n",
     "df = pd.read_csv('../data/qualipoc_data/cbrs_radio_2024_oct_nov.csv', sep=\";\")\n",
     "df.rename(columns={'PCI/PSC/BSIC': 'PCI'}, inplace=True)\n",
@@ -64,15 +85,8 @@
     "                   'Azimuth': 'bs_Azimuth', 'Downtilt': 'bs_Downtilt', 'Height': 'bs_Height'}, inplace=True)\n",
     "del df_pci_map\n",
     "\n",
-    "df_antenna = pd.read_csv('../data/antenna.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_antenna = pd.read_csv('../data/antenna.csv')\n",
+    "\n",
     "df[['Distance_2d', 'Distance_3d']] = df.apply(lambda row: haversine(row['ue_Latitude'], row['ue_Longitude'],\n",
     "                                                                    row['bs_Latitude'], row['bs_Longitude'], row['bs_Height']), axis=1, result_type='expand')\n",
     "df['Distance_3d_log'] = 10 * np.log10(df['Distance_3d'])\n",
@@ -88,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
