simple_training_done

--- a/final_project/notebooks/code6_learning.ipynb
+++ b/final_project/notebooks/code6_learning.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,20 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_linD = df[['bs_Power', 'Distance_3d']]\n",
-    "# X_linD_gps = df[['bs_Power', 'Distance_3d', 'ue_Latitude', 'ue_Longitude']]\n",
-    "X_logD = df[['bs_Power', 'Distance_3d_log']]\n",
-    "X_logD_gps = df[['bs_Power', 'Distance_3d_log', 'ue_Latitude', 'ue_Longitude']]\n",
-    "Y = df['RSRP']"
+    "# X_linD = df[['bs_Power', 'Distance_3d']].values\n",
+    "# X_linD_gps = df[['bs_Power', 'Distance_3d', 'ue_Latitude', 'ue_Longitude']].values\n",
+    "X_logD = df[['bs_Power', 'Distance_3d_log']].values\n",
+    "X_logD_gps = df[['bs_Power', 'Distance_3d_log', 'ue_Latitude', 'ue_Longitude']].values\n",
+    "Y = df['RSRP'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +116,241 @@
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "for gpu in gpus:\n",
     "    print(\"GPU:\", gpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training model_no_gps...\n",
+      "Epoch 1/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 1153.6404 - mae: 17.7757 - val_loss: 55.5478 - val_mae: 5.7135\n",
+      "Epoch 2/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 51.8027 - mae: 5.4926 - val_loss: 51.6289 - val_mae: 5.5678\n",
+      "Epoch 3/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 49.6521 - mae: 5.3716 - val_loss: 50.0832 - val_mae: 5.3261\n",
+      "Epoch 4/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 48.3359 - mae: 5.3099 - val_loss: 49.6319 - val_mae: 5.3779\n",
+      "Epoch 5/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 47.8225 - mae: 5.3096 - val_loss: 48.0345 - val_mae: 5.3592\n",
+      "Epoch 6/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 46.5975 - mae: 5.2524 - val_loss: 48.3004 - val_mae: 5.4898\n",
+      "Epoch 7/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 45.9863 - mae: 5.2205 - val_loss: 46.4120 - val_mae: 5.2485\n",
+      "Epoch 8/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 45.6257 - mae: 5.1965 - val_loss: 47.2736 - val_mae: 5.1724\n",
+      "Epoch 9/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 45.4117 - mae: 5.1882 - val_loss: 47.7492 - val_mae: 5.2131\n",
+      "Epoch 10/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 44.9333 - mae: 5.1528 - val_loss: 45.5123 - val_mae: 5.2510\n",
+      "Epoch 11/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 45.2200 - mae: 5.1671 - val_loss: 47.5676 - val_mae: 5.3023\n",
+      "Epoch 12/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 44.5766 - mae: 5.1294 - val_loss: 47.1069 - val_mae: 5.4394\n",
+      "Epoch 13/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 44.2540 - mae: 5.1155 - val_loss: 45.0901 - val_mae: 5.0973\n",
+      "Epoch 14/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 43.5827 - mae: 5.0759 - val_loss: 45.8568 - val_mae: 5.3626\n",
+      "Epoch 15/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 43.1174 - mae: 5.0398 - val_loss: 43.4591 - val_mae: 5.0058\n",
+      "Epoch 16/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 42.4467 - mae: 4.9834 - val_loss: 49.2267 - val_mae: 5.6009\n",
+      "Epoch 17/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 42.3458 - mae: 4.9806 - val_loss: 43.2517 - val_mae: 4.9211\n",
+      "Epoch 18/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 41.2062 - mae: 4.9080 - val_loss: 41.6041 - val_mae: 4.8648\n",
+      "Epoch 19/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 40.8291 - mae: 4.8849 - val_loss: 41.7736 - val_mae: 4.8515\n",
+      "Epoch 20/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 40.5590 - mae: 4.8786 - val_loss: 41.1464 - val_mae: 4.9224\n",
+      "Training model_gps...\n",
+      "Epoch 1/20\n",
+      "771/771 [==============================] - 2s 2ms/step - loss: 1287.2719 - mae: 20.0212 - val_loss: 52.2489 - val_mae: 5.5986\n",
+      "Epoch 2/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 42.6853 - mae: 5.0136 - val_loss: 41.2908 - val_mae: 5.1222\n",
+      "Epoch 3/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 36.1777 - mae: 4.6122 - val_loss: 35.4674 - val_mae: 4.6316\n",
+      "Epoch 4/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 33.7363 - mae: 4.4700 - val_loss: 33.5102 - val_mae: 4.4511\n",
+      "Epoch 5/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 32.3736 - mae: 4.3724 - val_loss: 32.1452 - val_mae: 4.3390\n",
+      "Epoch 6/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 30.6734 - mae: 4.2496 - val_loss: 34.4833 - val_mae: 4.7083\n",
+      "Epoch 7/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 29.3117 - mae: 4.1512 - val_loss: 29.4317 - val_mae: 4.1896\n",
+      "Epoch 8/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 28.0856 - mae: 4.0550 - val_loss: 28.2886 - val_mae: 4.0858\n",
+      "Epoch 9/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 27.3361 - mae: 3.9920 - val_loss: 27.8274 - val_mae: 4.0790\n",
+      "Epoch 10/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 26.6553 - mae: 3.9325 - val_loss: 29.1435 - val_mae: 4.1200\n",
+      "Epoch 11/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 26.4909 - mae: 3.9363 - val_loss: 26.9698 - val_mae: 4.0236\n",
+      "Epoch 12/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 26.2014 - mae: 3.8963 - val_loss: 27.0995 - val_mae: 4.0424\n",
+      "Epoch 13/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 25.8150 - mae: 3.8792 - val_loss: 26.5536 - val_mae: 3.9700\n",
+      "Epoch 14/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 25.2960 - mae: 3.8212 - val_loss: 25.7314 - val_mae: 3.8899\n",
+      "Epoch 15/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 25.4905 - mae: 3.8372 - val_loss: 25.1423 - val_mae: 3.7820\n",
+      "Epoch 16/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 24.9666 - mae: 3.7939 - val_loss: 25.3479 - val_mae: 3.8445\n",
+      "Epoch 17/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 25.0956 - mae: 3.8196 - val_loss: 25.9340 - val_mae: 3.8337\n",
+      "Epoch 18/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 24.5707 - mae: 3.7621 - val_loss: 24.4607 - val_mae: 3.7288\n",
+      "Epoch 19/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 24.3451 - mae: 3.7397 - val_loss: 24.8347 - val_mae: 3.7533\n",
+      "Epoch 20/20\n",
+      "771/771 [==============================] - 1s 2ms/step - loss: 24.3985 - mae: 3.7562 - val_loss: 25.8011 - val_mae: 3.9317\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "X_logD_train, X_logD_test, Y_logD_train, Y_logD_test = train_test_split(X_logD, Y, test_size=0.2, random_state=42)\n",
+    "X_logD_gps_train, X_logD_gps_test, Y_logD_gps_train, Y_logD_gps_test = train_test_split(X_logD_gps, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_logD_train = scaler.fit_transform(X_logD_train)\n",
+    "X_logD_test = scaler.transform(X_logD_test)\n",
+    "X_logD_gps_train = scaler.fit_transform(X_logD_gps_train)\n",
+    "X_logD_gps_test = scaler.transform(X_logD_gps_test)\n",
+    "\n",
+    "model_no_gps = Sequential([\n",
+    "    Dense(128, activation='relu', input_shape=(X_logD_train.shape[1],)),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1)\n",
+    "])\n",
+    "model_no_gps.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+    "\n",
+    "model_gps = Sequential([\n",
+    "    Dense(128, activation='relu', input_shape=(X_logD_gps_train.shape[1],)),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1)\n",
+    "])\n",
+    "model_gps.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+    "\n",
+    "print(\"Training model_no_gps...\")\n",
+    "history_no_gps = model_no_gps.fit(X_logD_train, Y_logD_train, epochs=20, batch_size=32, validation_split=0.2, verbose=1)\n",
+    "print(\"Training model_gps...\")\n",
+    "history_gps = model_gps.fit(X_logD_gps_train, Y_logD_gps_train, epochs=20, batch_size=32, validation_split=0.2, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Evaluating model_no_gps...\n",
+      "241/241 [==============================] - 0s 1ms/step - loss: 40.9625 - mae: 4.8953\n",
+      "MAE on test data: 4.90\n",
+      "\n",
+      "Evaluating model_gps...\n",
+      "241/241 [==============================] - 0s 1ms/step - loss: 25.5172 - mae: 3.8810\n",
+      "MAE on test data: 3.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nEvaluating model_no_gps...\")\n",
+    "loss, mae = model_no_gps.evaluate(X_logD_test, Y_logD_test)\n",
+    "print(f\"MAE on test data: {mae:.2f}\")\n",
+    "\n",
+    "print(\"\\nEvaluating model_gps...\")\n",
+    "loss, mae = model_gps.evaluate(X_logD_gps_test, Y_logD_gps_test)\n",
+    "print(f\"MAE on test data: {mae:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "964/964 [==============================] - 1s 1ms/step\n",
+      "964/964 [==============================] - 1s 1ms/step\n",
+      "\n",
+      "Sample predictions for model_no_gps:\n",
+      "Actual: -130.6, Predicted: -104.21\n",
+      "Actual: -105.4, Predicted: -105.65\n",
+      "Actual: -97.2, Predicted: -112.48\n",
+      "Actual: -90.6, Predicted: -110.85\n",
+      "Actual: -108.0, Predicted: -108.77\n",
+      "\n",
+      "Sample predictions for model_gps:\n",
+      "Actual: -130.6, Predicted: -100.30\n",
+      "Actual: -105.4, Predicted: -109.13\n",
+      "Actual: -97.2, Predicted: -110.81\n",
+      "Actual: -90.6, Predicted: -103.97\n",
+      "Actual: -108.0, Predicted: -109.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions_no_gps = model_no_gps.predict(X_logD_train)\n",
+    "predictions_gps = model_gps.predict(X_logD_gps_train)\n",
+    "\n",
+    "print(\"\\nSample predictions for model_no_gps:\")\n",
+    "for i in range(5):\n",
+    "    print(f\"Actual: {Y_logD_test[i]}, Predicted: {predictions_no_gps[i][0]:.2f}\")\n",
+    "\n",
+    "print(\"\\nSample predictions for model_gps:\")\n",
+    "for i in range(5):\n",
+    "    print(f\"Actual: {Y_logD_gps_test[i]}, Predicted: {predictions_gps[i][0]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_12 (Dense)            (None, 128)               384       \n",
+      "                                                                 \n",
+      " dense_13 (Dense)            (None, 64)                8256      \n",
+      "                                                                 \n",
+      " dense_14 (Dense)            (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_15 (Dense)            (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 10,753\n",
+      "Trainable params: 10,753\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_no_gps.summary()"
    ]
   }
  ],
@@ -135,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
