--- a/final_project/notebooks/code5_data_prep.ipynb
+++ b/final_project/notebooks/code5_data_prep.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preparing data for learning"
+    "Preparing data for learning - Issue #2 is resolved by this."
    ]
   },
   {
